tests/baselines/reference/returnValueInSetter.errors.txt
returnValueInSetter.ts(3,9): error TS2408: Setters cannot return a value.


==== returnValueInSetter.ts (1 errors) ====
    class f {
        set x(value) {
            return null; // Should be an error
            ~~~~~~
!!! error TS2408: Setters cannot return a value.
        }
    }
    
    